--- a/EvaluationPlatform-Core/pom.xml
+++ b/EvaluationPlatform-Core/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>SpongeCity.EvaluationPlatform</artifactId>
+    <artifactId>Core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>SpongeCity.EvaluationPlatform</groupId>
-            <artifactId>EvaluationPlatform-DBAccess</artifactId>
+            <artifactId>DBAccess</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
